Prepare October 2022 Identity release (#31311)
* Reset changes to the patch version.

* Updating the SDK dependencies for azure-identity

* Prepare Identity October 2022 Release

* Roll back readme version change